@@ -45,7 +45,7 @@ static void rename_folder_cb(FolderView *folderview, guint action, GtkWidget *wi
 static void move_folder_cb(FolderView *folderview, guint action, GtkWidget *widget);
 static void update_tree_cb(FolderView *folderview, guint action, GtkWidget *widget);
 static void remove_mailbox_cb(FolderView *folderview, guint action, GtkWidget *widget);
-static void add_mailbox(gpointer callback_data, guint callback_action, GtkWidget *widget);
+static void add_mailbox(GtkAction *action, gpointer callback_data);
 
 static GtkItemFactoryEntry maildir_popup_entries[] =
 {
@@ -75,18 +75,16 @@ static FolderViewPopup maildir_popup =
 	set_sensitivity
 };
 
-static GtkItemFactoryEntry mainwindow_add_mailbox = {
-	N_("/File/Add mailbox/Maildir++..."),
-	NULL, 
-	add_mailbox, 
-	0, 
-	NULL
-};
+static GtkActionEntry mainwindow_add_mailbox[] = {{
+	"File/AddMailbox/Maildir",
+	NULL, N_("Maildir++..."), NULL, NULL, G_CALLBACK(add_mailbox)
+}};
+
+static guint main_menu_id = 0;
 
 void maildir_gtk_init(void)
 {
 	guint i, n_entries;
-	GtkItemFactory *ifactory;
 	MainWindow *mainwin = mainwindow_get_mainwindow();
 
 	n_entries = sizeof(maildir_popup_entries) /
@@ -96,25 +94,24 @@ void maildir_gtk_init(void)
 
 	folderview_register_popup(&maildir_popup);
 
-	ifactory = gtk_item_factory_from_widget(mainwin->menubar);
-	gtk_item_factory_create_item(ifactory, &mainwindow_add_mailbox, mainwin, 1);
+	gtk_action_group_add_actions(mainwin->action_group, mainwindow_add_mailbox,
+			1, (gpointer)mainwin);
+	MENUITEM_ADDUI_ID_MANAGER(mainwin->ui_manager, "/Menu/File/AddMailbox", "Maildir", 
+			  "File/AddMailbox/Maildir", GTK_UI_MANAGER_MENUITEM,
+			  main_menu_id)
 }
 
 void maildir_gtk_done(void)
 {
-	GtkItemFactory *ifactory;
 	MainWindow *mainwin = mainwindow_get_mainwindow();
-	GtkWidget *widget;
 	
 	if (mainwin == NULL || claws_is_exiting())
 		return;
 
 	folderview_unregister_popup(&maildir_popup);
 
-	ifactory = gtk_item_factory_from_widget(mainwin->menubar);
-	widget = gtk_item_factory_get_widget(ifactory, mainwindow_add_mailbox.path);
-	gtk_widget_destroy(widget);
-	gtk_item_factory_delete_item(ifactory, mainwindow_add_mailbox.path);
+	MENUITEM_REMUI_MANAGER(mainwin->ui_manager,mainwin->action_group, "File/AddMailbox/RSSyl", main_menu_id);
+	main_menu_id = 0;
 }
 
 static void set_sensitivity(GtkItemFactory *factory, FolderItem *item)
@@ -154,8 +151,7 @@ static void update_tree_cb(FolderView *folderview, guint action,
 		folderview_rescan_tree(item->folder, TRUE);
 }
 
-static void add_mailbox(gpointer callback_data, guint callback_action,
-                        GtkWidget *widget)
+static void add_mailbox(GtkAction *action, gpointer callback_data)
 {
 	MainWindow *mainwin = (MainWindow *) callback_data;
 	gchar *path;
