@@ -1,3 +1,9 @@
+2008-07-29 [colin]	0.24.4cvs6
+
+	* src/maildir.c
+	* src/maildir_gtk.c
+		Switch the main menu to GtkUIManager
+
 2008-02-12 [wwp]	0.24.4cvs5
 
 	* configure.ac
